# elta-image-blur-api

./: .gitignore  Dockerfile  Face-Detection.py  Procfile  README.md  app.py  heroku.yml  pyproject.toml  requirements.txt  start.sh
face_app/: pyproject.toml
face_app/face_app/: __init__.py  app.py
face_app/src/: read_image.py  upload_image_to_s3.py
poetry-demo/: pyproject.toml
poetry-demo/poetry_demo/: __init__.py
src/: __init__.py  detect_faces.py  read_image.py  upload_image_to_s3.py
tf_demo/: classification.py  image.py
