[tool.poetry]
name = "face-app"
version = "1.0.0"
description = "Elta360 face blurring API"
authors = ["KeremDilmen <krmdlmn03@gmail.com>", "Okan Aslan <okan@vrelta.com>", "Emre Satilmis <emresatilmis42@gmail.com"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.11.4"
pendulum = "^2.1.2"
numpy = "^1.25.0"
opencv-python = "4.7.0.72"
matplotlib = "^3.7.1"
flask = "^2.3.2"
requests = "^2.31.0"
boto3 = "^1.28.12"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core>=1.0.5"]
build-backend = "poetry.core.masonry.api"
