[tool.poetry]
name = "face-app"
version = "0.1.0"
description = ""
authors = ["KeremDilmen <krmdlmn03@gmail.com>"]
readme = "README.md"
packages = [{include = "face_app"}]

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"
numpy = "^1.25.0"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
