[tool.poetry]
name = "face-app"
version = "0.1.0"
description = ""
authors = ["KeremDilmen <krmdlmn03@gmail.com>"]
readme = "README.md"
packages = [{include = "face_app"}]

[tool.poetry.dependencies]
python = "^3.11"
pendulum = "^2.1.2"
numpy = "^1.25.0"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"
flask = "^2.3.2"
jsonpickle = "^3.0.1"
requests = "^2.31.0"
boto3 = "^1.28.12"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
