[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Okan Aslan <okanaslan.08@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
py360convert = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
